# meteo_station

./: .gitignore  Basket_Oct24_1103AM.xls  CLAUDE.md  Cargo.toml  Cargo.toml.old  Justfile  Makefile.toml  README.md  ROADMAP.md  meteo_station.elf  temp.uf2  test.uf2
.cargo/: audit.toml  config.toml
.claude/: settings.json
.claude/brainstorm/: 1-ble-module-design.md  1-ble-tui-data-viewer.md  2-ble-link-soak-test.md  3-ratatui-station-dashboard.md  4-bme280-humidity-sensor.md  5-mlx90614-ir-sensor.md  6-bme280-veml7700-firmware.md  7-ble-broadcast-telemetry.md  8-tui-revamp-dossier.md  9-historic-web-dashboard.md
.claude/plans/: brainstorm-1-ble-module-implementation.md  brainstorm-1-ble-telemetry-peripheral.md  brainstorm-1-ble-tui-data-viewer.md  brainstorm-2-ble-link-soak-test.md  brainstorm-3-ratatui-station-dashboard.md  brainstorm-5-mlx90614-ir-sensor.md  brainstorm-6-bme280-veml7700-firmware.md  brainstorm-7-broadcast-telemetry.md  brainstorm-8-tui-revamp-dossier.md  brainstorm-9-historic-web-dashboard.md  clever-singing-parnas.md  cosmic-meandering-nest.md  sunny-hatching-diffie.md
.helix/: languages.toml
crates/meteo-chart/: Cargo.toml
crates/meteo-chart/src/: chart.rs  format.rs  lib.rs  palette.rs  xaxis.rs
crates/meteo-cli/: Cargo.toml
crates/meteo-cli/src/: main.rs
crates/meteo-firmware/: Cargo.toml
crates/meteo-firmware/.cargo/: config.toml
crates/meteo-firmware/src/: aggregator.rs  anemometer.rs  ble.rs  bme.rs  bmp.rs  bus.rs  config.rs  ina.rs  leds.rs  main.rs  mlx.rs  rain.rs  vane.rs  veml.rs  watchdog.rs
crates/meteo-lib/: Cargo.toml
crates/meteo-lib/proptest-regressions/ble/: frame.txt
crates/meteo-lib/src/: aggregate.rs  battery.rs  i2c_scan.rs  lib.rs  utils.rs
crates/meteo-lib/src/ble/: driver.rs  encoding.rs  frame.rs  gatt.rs  line_buffer.rs  location.rs  mod.rs  registry.rs  rn4871.rs  sample.rs
crates/meteo-lib/src/ble/rn4871/: command.rs  format.rs  ls_parser.rs  mod.rs  parser.rs  response.rs  status_event.rs  status_parser.rs
crates/meteo-lib/src/sensors/: bme280.rs  bmp388.rs  ina219.rs  mlx90614.rs  mod.rs  veml7700.rs  weather_meter.rs
crates/meteo-tui/: Cargo.toml
crates/meteo-tui/src/: app.rs  ble.rs  client.rs  compass.rs  feed.rs  image_render.rs  main.rs  model.rs  plot.rs  sensors.rs  theme.rs  ui.rs
crates/meteo-tui/src/ui/: diagnostics.rs  header.rs  history.rs  mod.rs  summary.rs
crates/meteo-web/: Cargo.toml  build.rs
crates/meteo-web/src/: lib.rs  main.rs  state.rs  types.rs
crates/meteo-web/src/api/: mod.rs  sse.rs
crates/meteo-web/src/collector/: bucket.rs  mod.rs
crates/meteo-web/src/components/: chart.rs  compass.rs  header.rs  live_band.rs  mod.rs  time_select.rs
crates/meteo-web/src/db/: mod.rs  schema.sql
crates/meteo-web/src/pages/: all_panels.rs  comparison.rs  mod.rs
crates/meteo-web/style/: _palette.scss  main.scss
crates/meteo-web/tests/: palette_css.rs
datasheets/: bme280.md  bmp388.md  esp32-s3-devkitm-1u.txt  esp32_h2_devkitm.md  esp32_s3_devkitm.md  lipo_battery.md  mlx90614.md  mt3608.md  nucleo_h753zi.md  nucleo_pins.csv  nucleo_pins.ods  rn4871.md  seamuing_7649083.txt  veml7700.md  weather_meter.md
docs/: Meteo Station - Dossier.dc.html  showcase.html
hardware/power/: README.md  _autosave-meteo_power.kicad_sch  gen_power_sch.py  meteo_power.kicad_pro  meteo_power.kicad_sch  ~meteo_power.kicad_sch.lck
scripts/: ble-debug.sh  ble_broadcast_check.sh  ble_notify_check.sh  ble_set_location.sh  ble_soak.sh
src/: ble.rs  bluetooth.rs  bmp388.rs  lib.rs  main.rs  pressure.rs
