[package]
name = "meteo_station"
version = "0.1.0"
authors = ["Vincent Berthier <vincent.berthier@posteo.org>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
bt-hci = { version = "*", features = ["defmt", "embassy-time"] }
cortex-m-rt = "0.7.3"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cyw43 = { version = "0.5.0", features = ["bluetooth", "defmt"] }
cyw43-pio = { version = "0.8.0", features = ["defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-rp = { version = "0.8.0", features = ["defmt", "rp235xa", "time-driver", "boot2-w25q080", "critical-section-impl"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
heapless = { version = "0.9.1", features = ["defmt"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1.1"
trouble-host = { version = "0.5.0", features = ["defmt"] }
fixed = "1.29.0"
fixed-macro = "1.2.0"

[patch.crates-io]
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", rev = "ff42c61dc6c0f870b4022aca52f3c45d992ae735" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", rev = "ff42c61dc6c0f870b4022aca52f3c45d992ae735" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "ff42c61dc6c0f870b4022aca52f3c45d992ae735" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "ff42c61dc6c0f870b4022aca52f3c45d992ae735" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "ff42c61dc6c0f870b4022aca52f3c45d992ae735" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "ff42c61dc6c0f870b4022aca52f3c45d992ae735" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "ff42c61dc6c0f870b4022aca52f3c45d992ae735" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "ff42c61dc6c0f870b4022aca52f3c45d992ae735" }
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", branch = "main" }

[profile.release]
debug = true
lto = true
opt-level = "z"  # Optimize for size
