[workspace]
members = [
    "crates/meteo-lib",
    "crates/meteo-firmware",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Vincent Berthier <vincent.berthier@posteo.org>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Library dependencies (platform-agnostic, build on host + target)
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io-async = "0.7"
heapless = "0.9"
libm = "0.2"

# Logging: defmt, streamed over the ESP32-H2 native USB-Serial-JTAG by esp-println.
defmt = "1.0"

# Embassy: executor/Spawner + the task macro and timers. The esp-rtos scheduler
# supplies the embassy time driver, so these follow esp-rtos's bounds — which are
# the current releases (embassy-executor 0.10, embassy-time 0.5). Per esp-rtos,
# embassy-executor must NOT enable any arch-* feature.
embassy-executor = "0.10"
embassy-time = { version = "0.5", features = ["defmt-timestamp-uptime"] }

# ESP32-H2 (riscv32imac) HAL + the esp-rtos scheduler. esp-rtos provides the
# embassy time driver and the #[esp_rtos::main] thread-mode executor for esp-hal
# 1.1. (esp-hal-embassy 0.9 is a dead end here: its `executors` feature needs
# esp-hal/__esp_hal_embassy, a feature only the 1.0.0-rc.0 pre-release defined; and
# esp-hal-smartled 0.17 caps esp-hal at ~1.0, so the onboard WS2812 colour path is
# incompatible with current esp-hal — the GPIO8 LED is driven as a plain GPIO.)
esp-hal = { version = "1.1", features = ["esp32h2", "unstable", "defmt"] }
esp-rtos = { version = "0.3", features = ["esp32h2", "embassy"] }
esp-println = { version = "0.17", features = ["esp32h2", "defmt-espflash"] }
esp-backtrace = { version = "0.19", features = ["esp32h2", "panic-handler", "defmt"] }
esp-bootloader-esp-idf = { version = "0.5", features = ["esp32h2"] }

# Dev dependencies
test-log = "0.2"
env_logger = "0.11"
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }

# Workspace members
meteo-lib = { path = "crates/meteo-lib", default-features = false }

[profile.release]
debug = true
lto = true
opt-level = "z"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[workspace.lints.clippy]
nursery = "warn"
pedantic = "warn"
restriction = "allow" # activated individually below
significant_drop_in_scrutinee = { level = "allow", priority = 1 } # annoying false positives on github
wildcard_imports = { level = "allow", priority = 1 }

# Restriction lints
absolute_paths = { level = "warn", priority = 1 }
alloc_instead_of_core = { level = "warn", priority = 1 }
# allow_attributes = { level = "warn", priority = 1 }
allow_attributes_without_reason = { level = "warn", priority = 1 }
arithmetic_side_effects = { level = "warn", priority = 1 }
assertions_on_result_states = { level = "warn", priority = 1 }
as_underscore = { level = "warn", priority = 1 }
big_endian_bytes = { level = "warn", priority = 1 }
clone_on_ref_ptr = { level = "warn", priority = 1 }
create_dir = { level = "warn", priority = 1 }
dbg_macro = { level = "warn", priority = 1 }
default_numeric_fallback = { level = "warn", priority = 1 }
default_union_representation = { level = "warn", priority = 1 }
deref_by_slicing = { level = "warn", priority = 1 }
disallowed_script_idents = { level = "warn", priority = 1 }
else_if_without_else = { level = "warn", priority = 1 }
empty_drop = { level = "warn", priority = 1 }
empty_structs_with_brackets = { level = "warn", priority = 1 }
exit = { level = "warn", priority = 1 }
expect_used = { level = "warn", priority = 1 }
filetype_is_file = { level = "warn", priority = 1 }
float_cmp_const = { level = "warn", priority = 1 }
fn_to_numeric_cast_any = { level = "warn", priority = 1 }
format_push_string = { level = "warn", priority = 1 }
get_unwrap = { level = "warn", priority = 1 }
host_endian_bytes = { level = "warn", priority = 1 }
if_then_some_else_none = { level = "warn", priority = 1 }
impl_trait_in_params = { level = "warn", priority = 1 }
indexing_slicing = { level = "allow", priority = 1 }
inline_asm_x86_att_syntax = { level = "warn", priority = 1 }
inline_asm_x86_intel_syntax = { level = "warn", priority = 1 }
integer_division = { level = "warn", priority = 1 }
iter_over_hash_type = { level = "warn", priority = 1 }
large_include_file = { level = "warn", priority = 1 }
let_underscore_must_use = { level = "warn", priority = 1 }
little_endian_bytes = { level = "warn", priority = 1 }
lossy_float_literal = { level = "warn", priority = 1 }
map_err_ignore = { level = "warn", priority = 1 }
mem_forget = { level = "warn", priority = 1 }
missing_assert_message = { level = "warn", priority = 1 }
missing_asserts_for_indexing = { level = "warn", priority = 1 }
mixed_read_write_in_expression = { level = "warn", priority = 1 }
multiple_inherent_impl = { level = "allow", priority = 1 }
multiple_unsafe_ops_per_block = { level = "warn", priority = 1 }
mutex_atomic = { level = "warn", priority = 1 }
needless_raw_strings = { level = "warn", priority = 1 }
panic_in_result_fn = { level = "warn", priority = 1 }
panic = { level = "warn", priority = 1 }
print_stderr = { level = "warn", priority = 1 }
print_stdout = { level = "warn", priority = 1 }
pub_without_shorthand = { level = "warn", priority = 1 }
rc_buffer = { level = "warn", priority = 1 }
rc_mutex = { level = "warn", priority = 1 }
redundant_type_annotations = { level = "warn", priority = 1 }
rest_pat_in_fully_bound_structs = { level = "warn", priority = 1 }
same_name_method = { level = "warn", priority = 1 }
# self_named_module_files = { level = "warn", priority = 1 }
semicolon_inside_block = { level = "warn", priority = 1 }
shadow_unrelated = { level = "warn", priority = 1 }
string_add = { level = "warn", priority = 1 }
string_slice = { level = "warn", priority = 1 }
suspicious_xor_used_as_pow = { level = "warn", priority = 1 }
tests_outside_test_module = { level = "warn", priority = 1 }
todo = { level = "warn", priority = 1 }
try_err = { level = "warn", priority = 1 }
undocumented_unsafe_blocks = { level = "warn", priority = 1 }
unimplemented = { level = "warn", priority = 1 }
unnecessary_safety_comment = { level = "warn", priority = 1 }
unnecessary_safety_doc = { level = "warn", priority = 1 }
unnecessary_self_imports = { level = "warn", priority = 1 }
unneeded_field_pattern = { level = "warn", priority = 1 }
unreachable = { level = "warn", priority = 1 }
unseparated_literal_suffix = { level = "warn", priority = 1 }
unwrap_in_result = { level = "warn", priority = 1 }
unwrap_used = { level = "warn", priority = 1 }
verbose_file_reads = { level = "warn", priority = 1 }

[workspace.metadata.cargo-machete]
ignored = []
