[workspace]
members = [
    "crates/meteo-lib",
    "crates/meteo-firmware",
    "crates/meteo-tui",
    "crates/meteo-chart",
    "crates/meteo-web",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Vincent Berthier <vincent.berthier@posteo.org>"]
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
# Library dependencies (platform-agnostic, build on host + target)
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io-async = "0.7"
heapless = "0.9"
libm = "0.2"

# Logging: defmt, streamed over the ESP32-H2 native USB-Serial-JTAG by esp-println.
defmt = "1.0"

# Embassy: executor/Spawner + the task macro and timers. The esp-rtos scheduler
# supplies the embassy time driver, so these follow esp-rtos's bounds — which are
# the current releases (embassy-executor 0.10, embassy-time 0.5). Per esp-rtos,
# embassy-executor must NOT enable any arch-* feature.
embassy-executor = "0.10"
embassy-time = { version = "0.5", features = ["defmt-timestamp-uptime"] }

# ESP32-H2 (riscv32imac) HAL + the esp-rtos scheduler. esp-rtos provides the
# embassy time driver and the #[esp_rtos::main] thread-mode executor for esp-hal
# 1.1. (esp-hal-embassy 0.9 is a dead end here: its `executors` feature needs
# esp-hal/__esp_hal_embassy, a feature only the 1.0.0-rc.0 pre-release defined; and
# esp-hal-smartled 0.17 caps esp-hal at ~1.0, so the onboard WS2812 colour path is
# incompatible with current esp-hal — the GPIO8 LED is driven as a plain GPIO.)
esp-hal = { version = "1.1", features = ["esp32h2", "unstable", "defmt"] }
esp-rtos = { version = "0.3", features = ["esp32h2", "embassy", "esp-alloc", "esp-radio"] }
esp-println = { version = "0.17", features = ["esp32h2", "defmt-espflash"] }
esp-radio = { version = "1.0.0-beta.0", features = ["esp32h2", "ble", "unstable", "defmt"] }
esp-alloc = "0.10"
esp-sync = "0.2"
trouble-host = { version = "0.6", default-features = false, features = ["peripheral", "default-packet-pool-mtu-255", "gatt"] }
embassy-sync = { version = "0.8", features = ["defmt"] }
embassy-futures = "0.1"
embassy-embedded-hal = { version = "0.6", default-features = false }
static_cell = "2.1"
esp-backtrace = { version = "0.19", features = ["esp32h2", "panic-handler", "defmt"] }
esp-bootloader-esp-idf = { version = "0.5", features = ["esp32h2"] }
esp-storage = { version = "0.9", features = ["esp32h2"] }
sequential-storage = "7"

# Dev dependencies
test-log = "0.2"
env_logger = "0.11"
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }

# Workspace members
meteo-lib = { path = "crates/meteo-lib", default-features = false }

# Embedded note: `debug = true` and NO `strip` — defmt/espflash decode log frames
# from the ELF's symbols, so stripping would break logging. `codegen-units = 1` +
# `lto` + `opt-level = "z"` keep the image small.
[profile.release]
debug = true
lto = true
opt-level = "z"
codegen-units = 1

[profile.dev]
debug = 2
opt-level = "s" # opt-level 0 firmware is often too large to flash comfortably

[profile.wasm-release]
inherits = "release"
opt-level = "s"
codegen-units = 1

[profile.gdb]
inherits = "release"
debug = 2
strip = false

[profile.profiling]
inherits = "release"
debug = 2
strip = false

[workspace.lints.rust]
unsafe_code = "warn"
unused = { level = "warn", priority = -1 }
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage,coverage_nightly)'] }

# rust-scaffold cargo-toml.md template: enable all four clippy groups, then carve
# out exceptions. Tuned for this no_std embedded firmware (see the embedded block
# at the end).
[workspace.lints.clippy]
restriction = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# We intentionally enable the restriction group as a whole.
blanket_clippy_restriction_lints = "allow"

# Contradictory pairs — keep the preferred style, allow the opposite.
self_named_module_files = "allow"
semicolon_outside_block = "allow"
separated_literal_suffix = "allow"
pub_with_shorthand = "allow"

# Contradicts idiomatic Rust.
implicit_return = "allow"
question_mark_used = "allow"

# Too noisy for practical use.
absolute_paths = "allow"
cognitive_complexity = "allow"
default_numeric_fallback = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
modulo_arithmetic = "allow"
module_name_repetitions = "allow"
multiple_inherent_impl = "allow"
pattern_type_mismatch = "allow"
single_call_fn = "allow"

# Endianness trio — mutually contradictory.
big_endian_bytes = "allow"
little_endian_bytes = "allow"
host_endian_bytes = "allow"

# Assembly style.
inline_asm_x86_att_syntax = "allow"
inline_asm_x86_intel_syntax = "allow"

# Legitimate patterns.
allow_attributes = "allow"
as_underscore = "allow"
as_pointer_underscore = "allow"
create_dir = "allow"
else_if_without_else = "allow"
exit = "allow"
float_arithmetic = "allow"
non_ascii_literal = "allow"
pub_use = "allow"
ref_patterns = "allow"

# Niche / needs separate configuration.
assertions_on_result_states = "allow"
cfg_not_test = "allow"
default_union_representation = "allow"
disallowed_script_idents = "allow"
doc_paragraphs_missing_punctuation = "allow"
field_scoped_visibility_modifiers = "allow"
filetype_is_file = "allow"
iter_over_hash_type = "allow"
missing_trait_methods = "allow"
multiple_unsafe_ops_per_block = "allow"
mutex_integer = "allow"
non_zero_suggestions = "allow"
pointer_format = "allow"
unneeded_field_pattern = "allow"

# --- no_std embedded adaptations (the template targets std app/lib crates) ---
# alloc_instead_of_core / std_instead_of_* stay ACTIVE on purpose (we are no_std).
# Register/driver code and defmt macro expansion index slices directly.
indexing_slicing = "allow"
# Embassy tasks and the main loop are intentionally infinite (cooperative scheduler).
infinite_loop = "allow"
# The esp-hal dependency tree legitimately pulls several versions of some
# transitive crates; not actionable from this workspace.
multiple_crate_versions = "allow"
# Both crates are publish = false, so crates.io metadata is not required.
cargo_common_metadata = "allow"
# Fixed-point sensor-calibration math casts pervasively; TryFrom everywhere would
# obscure the arithmetic. Overflow is still caught by arithmetic_side_effects.
as_conversions = "allow"
# The sensor/BLE driver error enums are deliberately named `Error` (idiomatic for a
# single per-module error type); renaming them is a public-API change.
error_impl_error = "allow"
# This project uses the `mod.rs` module layout, not the self-named-file style.
mod_module_files = "allow"
# Source items are grouped logically (registers, ctor, methods), not alphabetically.
arbitrary_source_item_ordering = "allow"
# Drivers/utilities don't force #[inline] on every public method; LTO handles it.
missing_inline_in_public_items = "allow"
# Short idents (e, f, s, i) are idiomatic in math, formatter, and closure code here.
min_ident_chars = "allow"
# Private fields/variants/consts are not required to carry doc comments.
missing_docs_in_private_items = "allow"
# Pre-existing driver style: `.ok()` to discard, `let _ =` without a type, and
# structs that mix pub/private fields. Kept as-is (not part of the config change).
unused_result_ok = "allow"
let_underscore_untyped = "allow"
partial_pub_fields = "allow"

[workspace.metadata.cargo-machete]
ignored = []

# Vendored, minimally-patched trouble-host (third_party/trouble-host, copied from the
# crates.io 0.6.0 source). The ESP32-H2 on-chip BLE controller accepts an HCI LE
# Connection Update (Command Status = success) but never runs the LL
# connection-parameters-request procedure on air, so the peripheral can never lengthen
# the connection's supervision timeout and the link drops whenever the central's radio is
# briefly busy. The patch restricts that HCI path to the central role so our peripheral
# uses the L2CAP Connection Parameter Update signaling instead, which the controller
# forwards correctly. See third_party/trouble-host/src/connection.rs::update_connection_params.
[patch.crates-io]
trouble-host = { path = "third_party/trouble-host" }
