[package]
name = "meteo-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
meteo-lib = { workspace = true }
btleplug = "0.11"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = "1"

[lints]
workspace = true
