[package]
name = "meteo-firmware"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Workspace library
meteo-lib = { workspace = true, features = ["defmt"] }

# Target-specific dependencies (embedded only)
[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-executor = { workspace = true }
embassy-stm32 = { workspace = true }
embassy-time = { workspace = true }
panic-probe = { workspace = true }

[lints]
workspace = true
