[package]
name = "meteo-firmware"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# Workspace library (hardware-agnostic drivers; embedded-hal-async based)
meteo-lib = { workspace = true, features = ["defmt"] }

# Target-specific dependencies (ESP32-H2, riscv32imac-unknown-none-elf only)
[target.'cfg(target_arch = "riscv32")'.dependencies]
defmt = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
esp-hal = { workspace = true }
esp-rtos = { workspace = true }
esp-println = { workspace = true }
esp-backtrace = { workspace = true }
esp-bootloader-esp-idf = { workspace = true }
esp-radio = { workspace = true }
esp-alloc = { workspace = true }
trouble-host = { workspace = true }

[lints]
workspace = true
