[package]
name = "meteo-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
defmt = ["dep:defmt"]
factory-reset = []

[dependencies]
defmt = { workspace = true, optional = true }
embedded-hal-async = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
