[package]
name = "meteo-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
defmt = ["dep:defmt"]

[dependencies]
defmt = { workspace = true, optional = true }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-io-async = { workspace = true }
heapless = { workspace = true }
libm = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
