[package]
name = "meteo-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ratatui = "0.30"
# Bare crossterm dep exists only to switch on the `event-stream` feature; all
# crossterm *types* are imported via `ratatui::crossterm` so there is a single
# crossterm version. Verify with `cargo tree -p meteo-tui -i crossterm` — it
# must show exactly one 0.29.x. If ratatui resolves a different crossterm, add
# `features = ["crossterm_0_29"]` to the ratatui dep above.
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
meteo-lib = { workspace = true }
bluer = { version = "0.17", features = ["bluetoothd"] }
uuid = "1"

[lints]
workspace = true
