[package]
name = "meteo-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
meteo-lib = { workspace = true }          # default-features = false (no defmt) via workspace dep
bluer = { version = "0.17", features = ["bluetoothd"] }  # official BlueZ binding; needs libdbus-1-dev + bluetoothd
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
futures = "0.3"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }  # version matches ratatui 0.30's crossterm
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
uuid = { version = "1", features = ["macro-diagnostics"] }  # uuid! macro support; unifies with bluer's uuid 1.x

[dev-dependencies]
test-log = { workspace = true }
env_logger = { workspace = true }

[lints]
workspace = true
