[package]
name = "meteo-web"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.20", features = ["nightly"] }
leptos_axum = { version = "0.8.10", optional = true }
leptos_meta = "0.8"
leptos_router = "0.8"
axum = { version = "0.8.9", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"], optional = true }
tokio-stream = { version = "0.1.18", optional = true }
rusqlite = { version = "0.40.1", features = ["bundled"], optional = true }
bluer = { version = "0.17", features = ["bluetoothd"], optional = true }
futures = { version = "0.3", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
meteo-lib = { workspace = true }
meteo-chart = { path = "../meteo-chart" }
anyhow = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[build-dependencies]
meteo-chart = { path = "../meteo-chart" }

[dev-dependencies]
serde_json = "1"
test-log = { workspace = true }
env_logger = { workspace = true }
meteo-chart = { path = "../meteo-chart" }

[features]
default = []
hydrate = ["leptos/hydrate", "dep:wasm-bindgen", "dep:console_error_panic_hook"]
ssr = [
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:rusqlite",
    "dep:bluer",
    "dep:futures",
    "dep:anyhow",
    "dep:serde_json",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[package.metadata.leptos]
output-name = "meteo-web"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "assets"
site-addr = "0.0.0.0:3000"
bin-features = ["ssr"]
lib-features = ["hydrate"]
bin-target-triple = "x86_64-unknown-linux-gnu"
lib-profile-release = "wasm-release"

[lints]
workspace = true
